codama-macros/tests/codama_attribute/type_nodes/public_key_type_node/with_input.fail.rs
use codama::codama;

#[codama(type = public_key(foo = 42))]
pub struct Test;

fn main() {}
